# ye-meme-trader

./: .env.example  .env2.txt  .gitignore  LICENSE  README.md  bot.py  check_balances.py  create_usdc_account.py  mac_python_cleanup.sh  pyproject.toml  requirements.txt  setup.py  test_live_swap.py  test_raydium_swap.py  test_sol_swap.py  test_swap.py  test_system.py
config/: settings.py
dashboard/: app.py
shared_data/: constants.py  redis_manager.py  shared_state.json
shared_states/: bot_state.json  lock_manager.py
solana-service/: api_clients.py  config.py  main.py  requirements.txt  solana-scanner.py  trader.py
solana-service/utils/: state manager.py
src/ye_meme_trader/: __init__.py  main.py
src/ye_meme_trader/config/: api_config.py  pools.py  settings.py
src/ye_meme_trader/core/: solana.py
src/ye_meme_trader/models/: token.py  trade.py
src/ye_meme_trader/services/: api_service.py  auto_trader.py  token_monitor.py
src/ye_meme_trader/shared_data/: __init__.py  redis_manager.py
telegram-bot/: handlers.py  main.py  state_reader.py
telegram-bot/utils/: message_formatter.py
telegram_bot/: main.py  telegram_bot.py  telegram_service.py
trading/: auto_trader.py  jupiter_client.py  price_fetcher.py  raydium_client.py  risk_analyzer.py  scanner.py  solana_client.py  solana_scanner.py  trader.py  wallet.py  ye_meme_trader.py  ye_trader.py
trading_bot/: main.py
utils/: ghetto_messages.py  notifications.py
